Resize duelyst background image to avoid strange transitions on landing page Fixed a few localization issues Fixed white email on white background for HS landing page Quicker mouse scroll on video when shift key is pressed Markdown blockquote now works properly

--- a/yo/app/plugins/sports/hearthstone/hearthstone.css
+++ b/yo/app/plugins/sports/hearthstone/hearthstone.css
@@ -354,6 +354,10 @@
     color: #fff;
 }
 
+.hearthstone .landing-page .team-col a {
+    color: #337ab7;
+}
+
 
 /* =============
 ** Smaller device
